--- a/da3_a1.Rmd
+++ b/da3_a1.Rmd
@@ -2,7 +2,7 @@
 title: "Data Analysis 3 - Assignment 1"
 author: "Xibei Chen"
 date: "`r format(Sys.time(), '%d %B %Y')`"
-geometry: "left=1.5cm,right=1.5cm,top=0.1cm,bottom=1cm"
+geometry: "left=1.5cm,right=1.5cm,top=1cm,bottom=1.5cm"
 output: pdf_document
 ---
 
@@ -24,11 +24,10 @@ library(kableExtra)
 library(ggpubr)
 ```
 
-## Introduction
-The aim of this assignment is to use [cps-earnings dataset](https://osf.io/g8p9j/) to build multiple predictive models using linear regression for hourly wage for **Computer and Mathematical Occupations**, compare model performance of these models in terms of (a) RMSE in the full sample, (b) cross-validated RMSE and (c) BIC in the full sample, and discuss the relationship between model complexity and performance.  
+# Introduction
+The aim of this assignment is to use [cps-earnings dataset](https://osf.io/g8p9j/) to build multiple predictive models using linear regression for hourly wage for **Computer and Mathematical Occupations**, compare model performance of these models in terms of (a) RMSE in the full sample, (b) BIC in the full sample and (c) cross-validated RMSE, and discuss the relationship between model complexity and performance.  
 
-## Data
-
+# Data Cleaning, EDA and Transformation (see details in Appendix)
 
 ```{r, include=FALSE}
 #######################################################
@@ -151,7 +150,7 @@ p7 <- ggplot( data = data, aes( x = weight) )  +
 
 
 * Target variable: Hourly wage
-* Predictor variables: Sex(male as base category), Marital status(married as base category), Race(white as base category), Highest degree(bachelor as base category), Age(squared and cubic), Weight(squared and cubic).
+* Predictor variables(cover several demographic indicators and one anthropometric indicator): Sex(male as base category), Marital status(married as base category), Race(white as base category), Highest degree(bachelor as base category), Age(squared and cubic), Weight(squared and cubic).
 
 
 ```{r, include=FALSE}
@@ -197,7 +196,7 @@ data <- data %>%
 
 ```
 
-## Regression Analysis  - Predicting Hourly Wage
+# Build 4 Models using linear regression with increasing model complexity
 
 ```{r, echo=FALSE}
 #######################################################
@@ -267,17 +266,14 @@ cv_mat
 # 5 Fold Cross-validated RMSE: Model3 is the best
 ```
 
-Build 4 Models using linear regression for target variable (hourly wage) with different predictors as follows:
+- Model 1: age and age squared;
+- Model 2: age, age squared, sex, and highest degree;
+- Model 3: age, age squared, sex, highest degree, race, and marital status;
+- Model 4: age, age squared, age cubic, sex, highest degree, race, marital status, weight, weight squared, weight cubic, interaction term of sex and age, interaction term of sex and highest degree.
 
-1. age and age squared;
-2. age, age squared, sex, and highest degree;
-3. age, age squared, sex, highest degree, race, and marital status;
-4. age, age squared, age cubic, sex, highest degree, race, marital status, weight, weight squared, weight cubic, interaction term of sex and age, interaction term of sex and highest degree.
+For the full sample, Model 4 is the best according to RMSE, while Model 2 is the best according to BIC (see model summary details in Appendix).
 
-For the full sample, Model4 is the best according to RMSE, while Model2 is the best according to BIC.
-In terms of 5-fold Cross-validated RMSE, Model3 is the best, as we can see from below visual of the relationship between model complexity and performance.
-
-```{r, echo=FALSE, fig.dim=c(4,3)}
+```{r, echo=FALSE, fig.dim=c(3,2), fig.align='center'}
 # Show model complexity and out-of-sample RMSE performance
 m_comp <- c()
 models <- c("reg1", "reg2", "reg3", "reg4")
@@ -292,14 +288,18 @@ m_comp <- tibble( model = models ,
 ggplot( m_comp , aes( x = complexity , y = RMSE ) ) +
         geom_point(color='#e85d04',size=2) +
         geom_line(color='#2a9d8f',size=0.5)+
-        labs(x='Number of explanatory variables',y='Averaged RMSE on test samples',
-             title='Prediction performance and model compexity') +
+        labs(x='Number of predictor variables',y='Averaged RMSE on test samples',
+             title='Prediction Performance and Model Compexity') +
+        xlim(0,20) +
         theme_minimal() +
-        xlim(0,20)
+        theme(plot.title = element_text(size=8, face = "bold"),
+              axis.title=element_text(size=8))
 ```
+In terms of 5-fold Cross-validated RMSE, Model 3 is the best (see details in Appendix). And we can see from the above visual the relationship between model complexity and performance. The averaged RMSE tends to be smaller which means model performance tends to be better, as number of predictor variables gets larger from the beginning. However, after a certain point, the averaged RMSE tends to be larger which means the model performance tends to get worse, as number of predictor variables keeps getting larger, this is because too complex models tends to overfit the test sample hence do not give the best prediction for the population or the general pattern represented by the original data.
+
 \newpage
-## Appendix
-### Date Cleaning
+# Appendix
+## Date Cleaning
 In the data cleaning process, I selected only the observations that meet the following criteria.
 
 * Occupation type: Computer and Mathematical Occupations;
@@ -308,7 +308,7 @@ In the data cleaning process, I selected only the observations that meet the fol
 * Age greater than 24, less than 64;
 * Education categories: Bachelor's, Master's or Doctorate degree.
 
-### Explain choice of predictors 
+## Explain choice of predictors 
 
 1. Computer and Mathematical Occupations are traditionally male-dominated, which is also confirmed in the distribution graph of sex, so I assume sex might have something to do with wage; 
 2. Marital status can to some extent explain how much a person is dedicated to his or her job, which is just my assumption; 
@@ -317,7 +317,26 @@ In the data cleaning process, I selected only the observations that meet the fol
 5. Age is supposed to be positively related to wage, although the association turns to be weaker when one gets older; 
 6. I also included weight, which might seems odd at the first glance, but I was hoping that it can catch some information about one's health, for example diet habit or how much exercise one does. 
 
-### Descriptive Statistics of Quantitative Variables
+## Distributions of target variable - hourly wage
+```{r, echo=FALSE, fig.width=4, fig.height=3,fig.align='center'}
+# Show distributions of target variable - hourly wage
+p1
+```
+From the graph we can tell that hourly wage is close to normally distributed.
+
+\newpage
+## Distributions of predictor variables
+```{r, echo=FALSE, fig.align='center', fig.dim=c(8,6)}
+association_figs <- ggarrange(p2, p3, p4, p5, p6, p7,
+                              hjust = -0.6,
+                              ncol = 3, nrow = 2)
+association_figs
+```
+
+- According to the distributions, combine some categories into one: (1) Marital status: combine 1 Married civilian spouse present, 2 Married AF spouse present, 3 Married spouse absent or separated as married(m); keep 4 as widowed; combine 5 Divorced and 6 Separated as separated/divorced(sd) and keep 7 as never married(nm); (2) Race: keep 1 white, 2 black, and 4 asian, combine the rest as other.
+- Decide the base category that has the most observations: (1) Sex(male as base category); (2) Marital status(married as base category); (3) Race(white as base category); (4) Highest degree(bachelor as base category).
+
+## Descriptive Statistics of Quantitative Variables
 ```{r, echo=FALSE}
 # Descriptive statistics of quantitative variables
 datasummary( (`Hourly Wage` = earnwke/uhours) +
@@ -329,23 +348,8 @@ datasummary( (`Hourly Wage` = earnwke/uhours) +
 ```
 
 \newpage
-### Distributions of target variable - hourly wage
-```{r, echo=FALSE, fig.width=4, fig.height=3,fig.align='center'}
-# Show distributions of target variable - hourly wage
-p1
-```
-
-### Distributions of predictor variables
-```{r, echo=FALSE, fig.align='center', fig.dim=c(8,6)}
-association_figs <- ggarrange(p2, p3, p4, p5, p6, p7,
-                              hjust = -0.6,
-                              ncol = 3, nrow = 2)
-association_figs
-```
-
-\newpage
-### Association between hourly wage and lowess age/quadratic age
-```{r, echo=FALSE, fig.dim=c(4,3), fig.align='center', message=FALSE}
+## Association between hourly wage and lowess age/quadratic age
+```{r, echo=FALSE, fig.dim=c(4,2.7), fig.align='center', message=FALSE}
 #######################################################
 # 5) Regression Analysis  - Predicting Hourly Wage
 # Lowess age with observations
@@ -366,11 +370,24 @@ ggplot(data = data, aes(x=age,y=wage)) +
         theme(legend.position=c(0.5,0.08),
               legend.direction = "horizontal",
               legend.text = element_text(size = 6))
+
+# Lowess vs. cubic specification with age
+ggplot(data = data, aes(x=age,y=wage)) +
+        geom_point(color = '#3cc5a3', size = 1, alpha = 0.5) + 
+        geom_smooth( aes(color='#e85d04'), method="loess", formula = y ~ x,se=F, size=1) +
+        geom_smooth( aes(color='#2a9d8f'), method="lm", formula = y ~ poly(x,3) , se=F, size=1) +
+        labs(x = "Age",y = "Hourly Wage (US$s)") +
+        scale_color_manual(name="", values=c('#e85d04','#2a9d8f'), labels=c("Cubic in age", "Lowess in age")) +
+        theme_minimal() +
+        theme(legend.position=c(0.5,0.08),
+              legend.direction = "horizontal",
+              legend.text = element_text(size = 6))
 ```
+From the graphs we can see that both quadratic and cubic age work quite well.
 
 \newpage
-### Association between hourly wage and lowess weight/quadratic weight/cubic weight
-```{r, echo=FALSE, fig.dim=c(4,2.5), fig.align='center', message=FALSE}
+## Association between hourly wage and lowess weight/quadratic weight/cubic weight
+```{r, echo=FALSE, fig.dim=c(4,2.7), fig.align='center', message=FALSE}
 # Lowess weight with observations
 ggplot(data = data, aes(x=weight, y=wage)) +
         geom_point( color = '#3cc5a3', size = 2, alpha = 0.5) + 
@@ -403,9 +420,10 @@ ggplot(data = data, aes(x=weight,y=wage)) +
               legend.direction = "horizontal",
               legend.text = element_text(size = 6))
 ```
+From the graphs we can tell that cubic weight works better than quadratic weight especially for extreme values.
 
 \newpage
-### Comapre models according to RMSE and BIC for the full sample
+## Comapre models according to RMSE and BIC for the full sample
 ```{r, echo=FALSE}
 # Evaluation of the models: using all the sample
 fitstat_register("k", function(x){length( x$coefficients ) - 1}, "No. Variables")
@@ -448,11 +466,11 @@ kable( etable( reg1, reg2, reg3, reg4,
 ```
 
 \newpage
-### Comapre models in terms of 5-fold Cross-validated RMSE
+## Comapre models in terms of 5-fold Cross-validated RMSE
 ```{r, echo=FALSE}
 kable(cv_mat, 
       "latex", booktabs = TRUE, 
-      caption = '5-fold Cross Validated RMSE') %>% kable_styling(latex_options = c("hold_position","scale_down"))
+      caption = '5-fold Cross Validated RMSE') %>% kable_styling(latex_options = c("hold_position","scale_down"), font_size = 4)
 # 5-fold Cross-validated RMSE: Model3 is the best
 ```
 
